--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ body {
     font-size: 48px;
 }
 
+/* Renamed redundant path*/
 .seo {
     color: #d9dcd6;
 }
 
+/* Renamed child item*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -32,6 +34,7 @@ body {
     font-size: 20px;
 }
 
+/* Renamed child item*/
 .header nav li {
     display: inline-block;
     margin-left: 25px;
@@ -82,22 +85,25 @@ p {
     background-color: #2589bd;
 }
 
+/* Renamed class selector*/
 .benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* Renamed class selector and bundled repeated settings*/
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/* Renamed class selector and bundled repeated settings*/
 .benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+/* Renamed class selector and bundled repeated settings*/
 .subtopic {
     margin-bottom: 20px;
     padding: 50px;
@@ -107,10 +113,12 @@ p {
     color: #ffffff;
 }
 
+/* Renamed class selector and bundled repeated settings*/
 .subtopic img {
     max-height: 200px;
 }
 
+/* Renamed class selector and bundled repeated settings*/
 .subtopic h2 {
     margin-bottom: 20px;
     font-size: 36px;
